--- a/ProCSSmart/pom.xml
+++ b/ProCSSmart/pom.xml
@@ -38,7 +38,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx</artifactId>
+            <version>8.9</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
